--- a/elements/templates/elements/index.html
+++ b/elements/templates/elements/index.html
@@ -40,6 +40,6 @@
 </div>
 {% endfor %}
 
-{% include "partials\pagination.html" with page_obj=elements %}
+{% include "partials/pagination.html" with page_obj=elements %}
 
 {% endblock %}
